[project]
name = "aac-datasets"
authors = [
    {name = "Étienne Labbé (Labbeti)", email = "labbeti.pub@gmail.com"},
]
description = "Audio Captioning datasets for PyTorch."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["audio", "deep-learning", "pytorch", "dataset", "caption", "datasets", "captioning", "audio-captioning"]
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: POSIX :: Linux",
]
maintainers = [
    {name = "Étienne Labbé (Labbeti)", email = "labbeti.pub@gmail.com"},
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://pypi.org/project/aac-datasets/"
Documentation = "https://aac-datasets.readthedocs.io/"
Repository = "https://github.com/Labbeti/aac-datasets.git"
Changelog = "https://github.com/Labbeti/aac-datasets/blob/main/CHANGELOG.md"
Tracker = "https://github.com/Labbeti/aac-datasets/issues"

[project.scripts]
aac-datasets = "aac_datasets.__main__:_print_usage"
aac-datasets-check = "aac_datasets.check:_main_check"
aac-datasets-download = "aac_datasets.download:_main_download"
aac-datasets-info = "aac_datasets.info:print_install_info"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["aac_datasets*"]  # package names should match these glob patterns (["*"] by default)

[tool.setuptools.dynamic]
version = {attr = "aac_datasets.__version__"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
pythonVersion = "3.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::FutureWarning", "ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
