[project]
name = "aac-datasets"
authors = [
    {name = "Étienne Labbé (Labbeti)", email = "labbeti.pub@gmail.com"},
]
description = "Audio Captioning datasets for PyTorch."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["audio", "deep-learning", "pytorch", "dataset", "caption", "datasets", "captioning", "audio-captioning"]
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: POSIX :: Linux",
]
maintainers = [
    {name = "Étienne Labbé (Labbeti)", email = "labbeti.pub@gmail.com"},
]
# dynamic = ["version", "dependencies", "optional-dependencies"]
dynamic = ["version"]
dependencies = [
    "huggingface-hub>=0.15.1",
    "numpy>=1.21.2",
    "py7zr>=0.17.2",
    "pythonwrench>=0.3.0,<0.4.0",
    "pyyaml>=6.0",
    "soundfile>=0.13.1 ; sys_platform == 'win32'",
    "torch>=1.10.1",
    "torchaudio>=0.10.1",
    "torchwrench>=0.7.2",
    "tqdm>=4.64.0",
    "typing-extensions>=4.6.0",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://pypi.org/project/aac-datasets/"
Documentation = "https://aac-datasets.readthedocs.io/"
Repository = "https://github.com/Labbeti/aac-datasets.git"
Changelog = "https://github.com/Labbeti/aac-datasets/blob/main/CHANGELOG.md"
Tracker = "https://github.com/Labbeti/aac-datasets/issues"

[project.scripts]
aac-datasets = "aac_datasets.__main__:_print_usage"
aac-datasets-check = "aac_datasets.check:_main_check"
aac-datasets-download = "aac_datasets.download:_main_download"
aac-datasets-info = "aac_datasets.info:print_install_info"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["aac_datasets*"]  # package names should match these glob patterns (["*"] by default)

[tool.setuptools.dynamic]
version = {attr = "aac_datasets.__version__"}

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
pythonVersion = "3.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::FutureWarning", "ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]

[project.optional-dependencies]
dev = [
    "black==23.3.0",
    "click>=8.0.4",
    "coverage[toml]>=7.6.1",
    "flake8>=4.0.1",
    "ipykernel>=6.9.1",
    "ipython>=8.12.3",
    "isort==5.12.0",
    "jupyter>=1.1.1",
    "pre-commit>=3.5.0",
    "pytest>=6.2.5",
    "sphinx>=7.1.2",
    "sphinx-press-theme>=0.8.0",
    "twine>=4.0.0",
]
