[metadata]

author = attr: aac.__author__
classifiers =
    Programming Language :: Python :: 3
description = Automated Audio Captioning datasets in Pytorch.
long_description = file: README.md
long_description_content_type = text/markdown
name = attr: aac.__name__
url = https://github.com/Labbeti/aac_datasets
version = attr: aac.__version__

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
