# -*- coding: utf-8 -*-

[metadata]
author = attr: aac_datasets.__author__
classifiers =
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Science/Research
description = Automated Audio Captioning datasets in Pytorch.
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
name = aac_datasets
url = https://github.com/Labbeti/aac_datasets
version = attr: aac_datasets.__version__

[options]
packages=find:
package_dir=
    =src
python_requires = >= 3.8

[options.extras_require]
tests =
  pytest
  flake8
  black

[options.packages.find]
where=src
