# -*- coding: utf-8 -*-

[metadata]
author = Etienne Labbé (Labbeti)
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
description = Automated Audio Captioning datasets for Pytorch.
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
name = aac_datasets
project_urls =
    Documentation = https://aac-datasets.readthedocs.io/
    Source = https://github.com/Labbeti/aac_datasets
    PyPI = https://pypi.org/project/aac-datasets/
url = https://pypi.org/project/aac-datasets/
version = attr: aac_datasets.__version__

[options]
packages=find:
package_dir=
    =src
python_requires = >= 3.8
install_requires = 
    torch>=1.10.1
    torchaudio>=0.10.1
    py7zr>=0.17.2
    pyyaml>=6.0
    tqdm>=4.64.0

[options.extras_require]
dev =
  pytest==6.2.5
  flake8==4.0.1
  click==8.0.4
  black==21.12b0
  spacy==3.2.1
  ipykernel==6.9.1

[options.packages.find]
where=src
